samples/_failures_safe/1761608948_706a1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d46aeedd.c: In function ‘parse_string’:
./samples/SAFE/__tmp_d46aeedd.c:160:17: error: expected ‘{’ at end of input
  160 |                 struct
      |                 ^~~~~~
./samples/SAFE/__tmp_d46aeedd.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d46aeedd.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d46aeedd.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d46aeedd.c:160:17: error: expected declaration or statement at end of input
